# gb-link-gamepad-firmware

./: .gitignore  CMakeLists.txt  README.md  gbgamepad.uf2  hid_descriptor.h  main.c  tusb_config.h  usb_descriptors.c
pio/: pio_secondary.c  pio_secondary.h  secondary.pio
